# rmusic_tui

./: .gitignore  .gitmodules  Cargo.toml
src/: cli.rs  main.rs  ui.rs
src/settings/: input.rs
src/ui/: explorer.rs  library_view.rs  tabs.rs  theme.rs
src/ui/explorer/: file_explorer.rs  mod.rs  widget.rs
