[package]
name = "rmusic_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
rmusic = {path = "rmusic"}
ratatui-explorer = {path = "ratatui-explorer"} # file expore wigit
clap = { version = "4.0", features = [
    "derive",
    "cargo",
    "env",
] } # command line interface
simplelog = "0.12" # logging
log = "0.4" # logging
cpal = "0.15" # music output
futures = "0.3" # async
ratatui = "0.28"
anyhow = "1.0"
