[package]
name = "rmusic_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
rmusic = { path = "rmusic" } # music player lib
ratatui-eventInput = "0.2" # input unification
clap = { version = "4.0", features = [
    "derive",
    "cargo",
    "env",
] } # command line interface
simplelog = "0.12" # logging
tui-logger = "0.14" # logging
log = "0.4" # logging
cpal = "0.15" # music output
futures = "0.3" # async
ratatui = { version = "0.29", features = ["unstable-widget-ref"] } # tui
anyhow = "1.0" # errors
sea-orm = { version = "1.0" } # db
